# qoi-format-cli

./: .gitignore  CMakeLists.txt  README.md  build.sh  format.sh
group/easyargs/: CMakeLists.txt  easyargs.cpp  easyargs.h
group/stb/: CMakeLists.txt
scripts/: createqoi.py
src/: CMakeLists.txt  ex.cpp  example.m.cpp  example.t.cpp  qoi.m.cpp  qoi_constants.cpp  qoi_constants.h  qoi_decoder.cpp  qoi_decoder.h  qoi_encoder.cpp  qoi_encoder.h  qoi_types.cpp  qoi_types.h  qoi_utils.cpp  qoi_utils.h
